# fmi4c

./: .gitignore  CMakeLists.txt
cmake/: config.cmake.in
include/: fmi4c.h
src/: CMakeLists.txt  fmi4c.c  fmi4c_utils.c
